[package]
name = "sleepp"
version = "0.1.0"
edition = "2024"
description = "sleep with a progress bar"
license = "MIT"
repository = "https://github.com/m9810223/sleepp"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
humantime = "2.3.0"
